# chatty-server

./: .gitignore  chatty.cabal  default.nix  shell.nix
nix/: groundhog.nix  groundhog_sqlite.nix  groundhog_th.nix
src/: Main.hs
src/Helpers/: Database.hs
src/Models/: Channel.hs  Group.hs  User.hs
