name:                Chatty
version:             0.0.1
synopsis:            A chat app
homepage:            https://github.com/archaeron/Chatty
license:             MIT
author:              Nicolas Gagliani
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable chatty
  hs-source-dirs:
                       src
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.7 && <5
                     , servant >= 0.2.2 && < 0.3
                     , servant-server >= 0.2.3 && < 0.3
                     , aeson
                     , text
                     , warp
                     , wai
                     , transformers
                     , groundhog >= 0.7.0.2 && < 0.7.1
                     , groundhog-sqlite >= 0.7.0.1 && < 0.7.1
                     , groundhog-th >= 0.7.0 && < 0.7.1
                     , resource-pool
                     , monad-control
                     , monad-logger
